--- a/index.html
+++ b/index.html
@@ -148,25 +148,27 @@ Hope you will enjoy it with your family</font></center>
 <br>Hashbrown recipe Crispy Hashbrown 
 <br>#HashBrown #McdonaldsHashBrown #Hashbrownrecipe #HashbrownBurger #HashbrownPatty #RestaurentStyleHashbrown #Restuarentstyleburger
 <br>#VegBurger</font></center>
-<ul type="square"><li>Ingredients:</li>
-<li>2 potatoes</li> 
-<li>2 green chilies</li> 
-<li>1/4 onion</li>
-<li>1 garlic clove</li>
-<li>Coriander leaves</li>
-<li>Salt,</li> 
-<li>turmeric, </li>
-<li>chilli powder</li> 
+<ul type="square">
+<li>Ingredients:</li>
+<li>2potatoes</li> 
+<li>2greenchilies</li> 
+<li>1/4-onion</li>
+<li>1-garlicclove</li>
+<li>Corianderleaves</li>
+<li>Salt</li> 
+<li>turmeric</li>
+<li>chillipowder</li> 
 <li>Cheese</li>
-<li>Rice flour</li> 
+<li>Riceflour</li> 
 <li>Oil</li>
 <li>Butter</li>
 <li>Burgerbuns</li>
-<li>Peasandcorn3spoons</li>
+<li>Peas and corn3spoons</li>
 <li>Lettuce</li>
 <li>Tomatoslices</li>
 <li>Mustard</li>
-<li>Mayonnaise</li></ul>
+<li>Mayonnaise</li>
+</ul>
 <center><a href="https://youtu.be/6KfIBA4P83M" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
 <center><image src="https://www.archanaskitchen.com/images/archanaskitchen/1-Author/Padma_Veeranki/Moong_Dal_RasamPesara_Pappu_Charu.jpg" width="1000" height="500" border="30"></center>
