--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <title>ssdine&tour</title>
 <body bgcolor="FDF8F5">
+     <center>
+    <img src="hash.jpeg" width="300" height="300">
+   </center> 
 <br><br><br>
 <CENTER><font face="impact" size="100" ><image src="https://yt3.ggpht.com/ytc/AAUvwni0rVzIzw57m8HjQbFazQX-LbtdT1B4GU8wKg=s176-c-k-c0x00ffffff-no-rj" width="40S" heigth="30">DINE&TOUR</font></center><hr><hr>
 <br><br><br>
