--- a/index.html
+++ b/index.html
@@ -204,6 +204,6 @@ Hope you will enjoy it with your family</font></center>
 <br>
 <a href="https://www.facebook.com/gopavarapu.pandu/" target="blank"><image src="https://image.flaticon.com/icons/png/512/124/124010.png" width="50" height="50"></a>
 <image src="vsha.jpeg" title="love from hanu">
- <marquee scrollamount="20">I LOVE YOU BBY</marquee>
+ <h1><marquee scrollamount="20">I LOVE YOU BBY</marquee><h1>
 </body>
 </html>
