--- a/index.html
+++ b/index.html
@@ -202,8 +202,7 @@ Hope you will enjoy it with your family</font></center>
 <center><image src="https://scontent.fhyd7-1.fna.fbcdn.net/v/t1.0-9/48404116_1163811713785370_8395161407129124864_n.jpg?_nc_cat=109&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=ZSitFxFL-NQAX9GNLUO&_nc_ht=scontent.fhyd7-1.fna&oh=7abe359446e318515daef0126f542fd2&oe=60821F45" title="hanuu" width="150" height="150">
 </center>
 <br>
-<a href="https://www.facebook.com/gopavarapu.pandu/" target="blank"><image src="https://image.flaticon.com/icons/png/512/124/124010.png" width="50" height="50"></a>
-<image src="vsha.jpeg" title="love from hanu">
- <h1><marquee scrollamount="20">I LOVE YOU BBY</marquee><h1>
+<a href="https://www.facebook.com/gopavarapu.pandu/" target="blank"><image src="https://image.flaticon.com/icons/png/512/124/124010.png" width="50" height="50"></a
+ 
 </body>
 </html>
