--- a/index.html
+++ b/index.html
@@ -22,39 +22,39 @@ Also on gardening and health tips Workout too Stay tuned.<br>
 <center>watchnow</center>
 <center><a href="https://youtu.be/5Yc2qAj0AuQ" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="juice.jpeg" width="1000" height="500" border="30"></center>
+<center><image src="juice.jpeg" width="1000" height="1000" border="30"></center>
 <br>
 center><font size="6">2.Fruits smoothie fruits juice fruits and nuts smoothie& nuts juice milkshake<br> super easy to make for kids and pregnants or diabetic patients</font></center>
 <br><center>watchnow</center>
 <center><a href="https://youtu.be/IZq-A_6VW18" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="soyarice.jpeg" width="1000" height="700" border="30"></center>
+<center><image src="soyarice.jpeg" width="1000" height="1000" border="30"></center>
 <br>
 <center><font size="6">3.Tomato Soya rice or Tomato rice or<br> Tomato Pulav in Pulav style Indian rice style recipe can be made all the times</font></center>
 <br><center>watchnow</center>
 <center><a href="https://youtu.be/jovpLnFwZqs" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="faffe.jpeg" width="1000" height="500" border="30"></center>
+<center><image src="faffe.jpeg" width="1000" height="1000" border="30"></center>
 <br>
 <center><font size="6">4.Crispy Falafel Must try best Falafel healthy fresh vegetable salad hummus(you will love it)</font></center>
 <br><center>watchnow</center>
 <center><a href="https://youtu.be/OMAqQlMMlZI" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="brinjal.jpg" width="1000" height="1500" border="30"></center>
+<center><image src="brinjal.jpg" width="1000" height="1000" border="30"></center>
 <br>
 <center><font size="6">5.Vankaya curry Egg plant curry Brinjal Curry Gravy curry rice sidedish Roti SideDish<br> | Tasty Vankaya curry | Brinjal Gravy recipe Brinjal recipe<br> 
 easily made quickest egg plant gravy curry everyone's favorite receipe</font></center>
 <br><center>watchnow</center>
 <center><a href="https://youtu.be/IV0JgWmCyfI" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="hummus.jpeg" width="1000" height="700" border="30"></center>       
+<center><image src="hummus.jpeg" width="1000" height="1000" border="30"></center>       
 <br>
 <center><font size="6">6.Hummus recipe  simple and easy way Homemade Hummus Healthy Hummus everyone can eat<br> with falafel or saladBest tasty Hummus you have ever hadHummus with Healthy Snacks Falafel Hummus Chickpeas Recipe <br>| Veg Salad Hummus Hummus Best food one can have anytime and can make it easily with very few ingredientsServe <br>with salad, falafel or with wrap
 Best food you can have at home super healthy</font></center>
 <br><center>watchnow</center>
 <center><a href="https://youtu.be/oRsmfVWqwY8" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="burger.jpeg" width="1000" height="500" border="30"></center>
+<center><image src="burger.jpeg" width="1000" height="1000" border="30"></center>
 <br>
 <center><font size="6">7.Veggie burger Beans patty burger includes veg patty preparation super tasty must try recipe <br>and let me know your feedback</font></center>
 <ul type="square"><li>Ingredients required</li> 
@@ -72,14 +72,14 @@ Best food you can have at home super healthy</font></center>
 <br><center>watchnow</center>
 <center><a href="https://youtu.be/zdx-qRHGL74" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="guacamole.jpeg" width="1000" height="500" border="30"></center>
+<center><image src="guacamole.jpeg" width="1000" height="1000" border="30"></center>
 <br>
 <center><font size="6">8.Guacamole Avacado recipe also make it as Avacado bread for breakfast or dinner Can be done in less than 5 mins<br> with very few ingredients super healthy and tasty
 Required ingredients: 1 avacado, Onion,Chili,Garlic, clove,Lemon,Salt and pepper,Roasted Bread<pr>Let me know your feedback<></font></center>
 <br><center>watchnow</center>
 <center><a href="https://youtu.be/fPvtnIM6YMo" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="omlet.jpeg" width="1000" height="700" border="30"></center>
+<center><image src="omlet.jpeg" width="1000" height="1000" border="30"></center>
 <br>
 <center><font size="6">9.Healthy breakfast and snack recipe can be made easily within 5 mins</font></center> 
 <ul type="square"><li>Ingredients:</li> 
@@ -92,7 +92,7 @@ Required ingredients: 1 avacado, Onion,Chili,Garlic, clove,Lemon,Salt and pepper
 <br><center>watchnow</center>
 <center><a href="https://youtu.be/puHmdSa2zw8" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="vbiriyani.jpeg" width="1000" height="1500" border="30"></center>
+<center><image src="vbiriyani.jpeg" width="1000" height="1000" border="30"></center>
 <br>
 <center><font size="6">10.Vegetable Biryani Panner Biryani Veg Biryani vegetable biriyani Veg Biryani Recipe <br>| veg Dum Biryani | vegetable Dum Biriyani | panner Biryani |panner Biryani restaurant style <br>| restaurant style Biriyani 
 Vegetable Biryani or Panner Biriyani or Hyderabadi biriyani or veg biriyani or veg Dum biriyani made<br> with various veggies and spices super tasty and restaurant style <br>with gravy under Biriyani rice
@@ -122,7 +122,7 @@ Hope you will enjoy it with your family</font></center>
 <br><center>watchnow</center>
 <center><a href="https://youtu.be/fS4skmFAWZo" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="chicken.jpeg" width="1000" height="1049S" border="30"></center>
+<center><image src="chicken.jpeg" width="1000" height="1000" border="30"></center>
 <br>
 <center><font size="6">11.Chicken Recipe  Chicken Curry  Chicken Gravy Chicken recipe Chicken Gravy Recipe Chicken Breast curry Chicken curry for <br>rice Chicken Gravy for roti Simple Chicken curry easy chicken curry quick chicken curry
 <br>Chicken curry with simple steps with few ingredients super tasty enjoy it rice and roti
@@ -149,7 +149,7 @@ Hope you will enjoy it with your family</font></center>
 <center>watchnow</center>
 <center><a href="https://youtu.be/W8lMza0OAz8" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="bendi.jpeg" width="1000" height="500" border="30"></center>
+<center><image src="bendi.jpeg" width="1000" height="1000" border="30"></center>
 <br>
 <center><font size="6">12.Bhindi Fry Recipe , Bhindi fry , okra fry,  Bendakaya vepudu, Fry curries Ladiesfinger recipe Ladiesfinger fry lunch recipe<br> side dish for roti or chapathi or rice Bendi fry 
 <br>#Bendakaya fry can be done in less than 15 minutes with very few ingredients 
@@ -170,7 +170,7 @@ Hope you will enjoy it with your family</font></center>
 <br><center>watchnow</center>
 <center><a href="https://youtu.be/WJhBKcbMnYY" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="hash.jpg" width="1000" height="700" border="30"></center>
+<center><image src="hash.jpeg" width="1000" height="1000" border="30"></center>
 <br>
 <center><font size="6">13.Hash browns Burger made from potatoes and veggies super tasty MC Donald’s style recipe with crispy Hashbrowns
 <br>Restaurant style and super crispy veggie tasty burger
@@ -201,7 +201,7 @@ Hope you will enjoy it with your family</font></center>
 <br><center>watchnow</center>
 <center><a href="https://youtu.be/6KfIBA4P83M" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="papu.jpeg" width="1000" height="500" border="30"></center>
+<center><image src="papu.jpeg" width="1000" height="1000" border="30"></center>
 <br>
 <center><font size="6">14.Pappu Charu with Lemon is simple recipe can prepare in few mins 
 <br>2 varieties with toor dal one is Chappidi Pappu and them Pappu Charu
@@ -235,4 +235,16 @@ Hope you will enjoy it with your family</font></center>
 <a href="https://www.facebook.com/gopavarapu.pandu/" target="blank"><image src="https://image.flaticon.com/icons/png/512/124/124010.png" width="50" height="50"></a>
 </body>
 </html>
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
  
