--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <title>ssdine&tour</title>
 <body bgcolor="D7BDE2">
-<CENTER><font face="impact" size="10" >
-<image src="https://yt3.ggpht.com/ytc/AAUvwni0rVzIzw57m8HjQbFazQX-LbtdT1B4GU8wKg=s176-c-k-c0x00ffffff-no-rj" width="40" heigth="30">DINE&TOUR</font></center><hr><hr>
+<h1><CENTER><font face="impact">
+<image src="https://yt3.ggpht.com/ytc/AAUvwni0rVzIzw57m8HjQbFazQX-LbtdT1B4GU8wKg=s176-c-k-c0x00ffffff-no-rj" width="40" heigth="30">DINE&TOUR</font></center><h1>
+<hr><hr>
 <br><br><br><br>
 <center><font size="6" face="Lucida Sans">
 Origin from India this website is mainly will be on cooking<br>
@@ -13,7 +14,7 @@ Also on gardening and health tips Workout too Stay tuned.<br>
 <br><br>
 <hr>
 <center><font size="7" face="Georgia Bold">OUR RECEPIES </font></center><hr><br><br>
-<!marquee scrollamount="50"><center><image src="bananabread.jpeg" width="1000" height="700" border="30"></center></marquee>
+<marquee scrollamount="50"><center><image src="bananabread.jpeg" width="1000" height="700" border="30"></center></marquee>
 <br>
 <center><font size="6">1.BananaBread Moist Oats Banana Bread Eggless BananaBread Nuts BananaBread Tasty Banana Bread 
 <br>| Healthy BananaBread Banana Cake BananaBread Recipe Cake Baking Bread baking 
@@ -40,7 +41,7 @@ Also on gardening and health tips Workout too Stay tuned.<br>
 <br><center>watchnow</center>
 <center><a href="https://youtu.be/OMAqQlMMlZI" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="brinjal.jpg" width="1000" height="700" border="30"></center>
+<center><image src="brinjal.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">5.Vankaya curry Egg plant curry Brinjal Curry Gravy curry rice sidedish Roti SideDish<br> | Tasty Vankaya curry | Brinjal Gravy recipe Brinjal recipe<br> 
 easily made quickest egg plant gravy curry everyone's favorite receipe</font></center>
