--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 Origin from India this website is mainly will be on cooking<br>
 which includes all varieties of Andhra ,Telangana style and other countries tasty<br>
 and easy cooking recipe videos with English subtitles, tour, home design and decor<br>
-Also on gardening and health tips Workout too Stay tuned.<br>
-</center>
+Also on gardening and health tips Workout too Stay tuned.</center>
 <br><br>
 <hr>
 <center><font size="7" face="Georgia Bold">OUR RECEPIES </font></center><hr><br><br>
-<marquee scrollamount="50"><center><image src="bananabread.jpeg" width="1000" height="700" border="30"></center></marquee>
+<marquee scrollamount="50" direction="up"><center><image src="bananabread.jpeg" width="1000" height="700" border="30"></center></marquee>
 <br>
 <center><font size="6">1.BananaBread Moist Oats Banana Bread Eggless BananaBread Nuts BananaBread Tasty Banana Bread 
 <br>| Healthy BananaBread Banana Cake BananaBread Recipe Cake Baking Bread baking 
