--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Also on gardening and health tips Workout too Stay tuned.</center>
 <br><br>
 <hr>
 <center><font size="7" face="Georgia Bold">OUR RECEPIES </font></center><hr><br><br>
-<marquee scrollamount="50" direction="up"><center><image src="bananabread.jpeg" width="1000" height="700" border="30"></center></marquee>
+<marquee scrollamount="50" direction>="up"><center><image src="bananabread.jpeg" width="1000" height="700" border="30"></center></marquee>
 <br>
 <center><font size="6">1.BananaBread Moist Oats Banana Bread Eggless BananaBread Nuts BananaBread Tasty Banana Bread 
 <br>| Healthy BananaBread Banana Cake BananaBread Recipe Cake Baking Bread baking 
@@ -22,7 +22,7 @@ Also on gardening and health tips Workout too Stay tuned.</center>
 <center>watchnow</center>
 <center><a href="https://youtu.be/5Yc2qAj0AuQ" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<center><image src="juice.jpeg" width="1000" height="700" border="30"></center>
+<marquee scrollamount="50" direction>="down"><center><image src="juice.jpeg" width="1000" height="700" border="30"></center></marquee>
 <br>
 <center><font size="6">2.Fruits smoothie fruits juice fruits and nuts smoothie& nuts juice milkshake<br> super easy to make for kids and pregnants or diabetic patients</font></center>
 <br><center>watchnow</center>
