--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <title>ssdine&tour</title>
 <body bgcolor="D7BDE2">
-<h1><CENTER><font face="impact">
-<image src="https://yt3.ggpht.com/ytc/AAUvwni0rVzIzw57m8HjQbFazQX-LbtdT1B4GU8wKg=s176-c-k-c0x00ffffff-no-rj" width="40" heigth="30">DINE&TOUR</font></center><h1>
-<hr><hr>
+<CENTER><font face="impact" size="10">
+<image src="https://yt3.ggpht.com/ytc/AAUvwni0rVzIzw57m8HjQbFazQX-LbtdT1B4GU8wKg=s176-c-k-c0x00ffffff-no-rj" width="40" heigth="30">DINE&TOUR</font></center>
+
 <br><br><br><br>
 <center><font size="6" face="Lucida Sans">
 Origin from India this website is mainly will be on cooking<br>
@@ -11,9 +11,9 @@ which includes all varieties of Andhra ,Telangana style and other countries tast
 and easy cooking recipe videos with English subtitles, tour, home design and decor<br>
 Also on gardening and health tips Workout too Stay tuned.</center>
 <br><br>
-<hr>
-<center><font size="7" face="Georgia Bold">OUR RECEPIES </font></center><hr><br><br>
-<marquee scrollamount="50" direction="up"><center><image src="bananabread.jpeg" width="1000" height="700" border="30"></center></marquee>
+
+<center><font size="7" face="Georgia Bold">OUR RECEPIES </font></center><br><br>
+<center><image src="bananabread.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">1.BananaBread Moist Oats Banana Bread Eggless BananaBread Nuts BananaBread Tasty Banana Bread 
 <br>| Healthy BananaBread Banana Cake BananaBread Recipe Cake Baking Bread baking 
@@ -22,7 +22,7 @@ Also on gardening and health tips Workout too Stay tuned.</center>
 <center>watchnow</center>
 <center><a href="https://youtu.be/5Yc2qAj0AuQ" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
 <br><br>
-<marquee scrollamount="50" direction="down"><center><image src="juice.jpeg" width="1000" height="700" border="30"></center></marquee>
+<center><image src="juice.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">2.Fruits smoothie fruits juice fruits and nuts smoothie& nuts juice milkshake<br> super easy to make for kids and pregnants or diabetic patients</font></center>
 <br><center>watchnow</center>
@@ -224,9 +224,9 @@ Hope you will enjoy it with your family</font></center>
 <li>That’s it</li></ul>
 <br><center>watchnow</center>
 <center><a href="https://youtu.be/XcaQ9xD1xNk" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
-<br><br><br><hr>
+<br><br><br>
 <center><marquee scrollamount="10"><font size="8">Thankyou!!!</font></center></marquee>
-<hr><br><br><br>
+<br><br><br>
 <center><font size="5" face="Verdana">DESGINEDBY:</font></center>
 <center><image src="https://scontent.fhyd7-1.fna.fbcdn.net/v/t1.0-9/48404116_1163811713785370_8395161407129124864_n.jpg?_nc_cat=109&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=ZSitFxFL-NQAX9GNLUO&_nc_ht=scontent.fhyd7-1.fna&oh=7abe359446e318515daef0126f542fd2&oe=60821F45" title="hanuu" width="100" height="100">
 </center>
