--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
 <title>ssdine&tour</title>
 <body bgcolor="D7BDE2">
-<CENTER><font face="impact" size="10">
-<image src="https://yt3.ggpht.com/ytc/AAUvwni0rVzIzw57m8HjQbFazQX-LbtdT1B4GU8wKg=s176-c-k-c0x00ffffff-no-rj" width="40" heigth="30">DINE&TOUR</font></center>
+<br><br><br><marquee direction="up" scrollamount="5"><CENTER><font face="impact" size="12">
+<image src="https://yt3.ggpht.com/ytc/AAUvwni0rVzIzw57m8HjQbFazQX-LbtdT1B4GU8wKg=s176-c-k-c0x00ffffff-no-rj" width="40" heigth="30">DINE&TOUR</font></center></marquee>
 
-<br><br><br><br>
+<br><br><br><br><br><br><br><br>
 <center><font size="6" face="Lucida Sans">
 Origin from India this website is mainly will be on cooking<br>
 which includes all varieties of Andhra ,Telangana style and other countries tasty<br>
 and easy cooking recipe videos with English subtitles, tour, home design and decor<br>
 Also on gardening and health tips Workout too Stay tuned.</center>
-<br><br>
+<br><br><br><br><br><br>
 
 <center><font size="7" face="Georgia Bold">OUR RECEPIES </font></center><br><br>
 <center><image src="bananabread.jpeg" width="1000" height="700" border="30"></center>
