--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>ssdine&tour</title>
-<body bgcolor="D7BDE2"><center>
+<body bgcolor="D7BDE2">
 <br><br><br><marquee direction="up" scrollamount="5"><CENTER><font face="impact" size="12">
 <image src="https://yt3.ggpht.com/ytc/AAUvwni0rVzIzw57m8HjQbFazQX-LbtdT1B4GU8wKg=s176-c-k-c0x00ffffff-no-rj" width="40" heigth="30">DINE&TOUR</font></center></marquee>
 
@@ -206,7 +206,7 @@ Hope you will enjoy it with your family</font></center>
 <center><font size="6">14.Pappu Charu with Lemon is simple recipe can prepare in few mins 
 <br>2 varieties with toor dal one is Chappidi Pappu and them Pappu Charu
 <br>Chappidi Pappu is best combination with rice and pickle also ghee even kids enjoy it very much</font></center>
-<ul type="square"><li>Ingredients:</li>
+<ul type="square" allign="left" ><li>Ingredients:</li>
 <li>1 cup Dal</li>
 <li>Turmeric powder</li> 
 <li>1/4 onion </li>
@@ -233,7 +233,7 @@ Hope you will enjoy it with your family</font></center>
 <br>
 <center>contact</center>
 <a href="https://www.facebook.com/gopavarapu.pandu/" target="blank"><image src="https://image.flaticon.com/icons/png/512/124/124010.png" width="50" height="50"></a>
-</center>
-</center></body>
+
+</body>
 </html>
  
