--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <br><br><br><marquee direction="up" scrollamount="5"><CENTER><font face="impact" size="12">
 <image src="https://yt3.ggpht.com/ytc/AAUvwni0rVzIzw57m8HjQbFazQX-LbtdT1B4GU8wKg=s176-c-k-c0x00ffffff-no-rj" width="40" heigth="30">DINE&TOUR</font></center></marquee>
 
-<br><br><br><br><br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
 <center><font size="6" face="Lucida Sans">
 Origin from India this website is mainly will be on cooking<br>
 which includes all varieties of Andhra ,Telangana style and other countries tasty<br>
@@ -12,49 +13,41 @@ and easy cooking recipe videos with English subtitles, tour, home design and dec
 Also on gardening and health tips Workout too Stay tuned.</center>
 <br><br><br><br><br><br>
 
-<center><font size="7" face="Georgia Bold">OUR RECEPIES </font></center><br><br>
-<center><image src="bananabread.jpeg" width="1000" height="700" border="30"></center>
+<center><font size="7"><b>OUR RECEPIES</b> </font></center><br><br>
+
 <br>
 <center><font size="6">1.BananaBread Moist Oats Banana Bread Eggless BananaBread Nuts BananaBread Tasty Banana Bread 
 <br>| Healthy BananaBread Banana Cake BananaBread Recipe Cake Baking Bread baking 
 </font></center>
 <br>
-<center>watchnow</center>
-<center><a href="https://youtu.be/5Yc2qAj0AuQ" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/5Yc2qAj0AuQ"  frameborder="0" allowfullscreen></iframe></center>
 <br><br>
-<center><image src="juice.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">2.Fruits smoothie fruits juice fruits and nuts smoothie& nuts juice milkshake<br> super easy to make for kids and pregnants or diabetic patients</font></center>
-<br><center>watchnow</center>
-<center><a href="https://youtu.be/IZq-A_6VW18" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/IZq-A_6VW18" frameborder="0" allowfullscreen></iframe></center>>
 <br><br>
-<center><image src="soyarice.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">3.Tomato Soya rice or Tomato rice or<br> Tomato Pulav in Pulav style Indian rice style recipe can be made all the times</font></center>
-<br><center>watchnow</center>
-<center><a href="https://youtu.be/jovpLnFwZqs" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
+
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/jovpLnFwZqs"  frameborder="0"  allowfullscreen></iframe></center>
 <br><br>
-<center><image src="faffe.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">4.Crispy Falafel Must try best Falafel healthy fresh vegetable salad hummus(you will love it)</font></center>
-<br><center>watchnow</center>
-<center><a href="https://youtu.be/OMAqQlMMlZI" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
+<br>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/OMAqQlMMlZI" frameborder="0"  allowfullscreen></iframe></center>
 <br><br>
-<center><image src="brinjal.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">5.Vankaya curry Egg plant curry Brinjal Curry Gravy curry rice sidedish Roti SideDish<br> | Tasty Vankaya curry | Brinjal Gravy recipe Brinjal recipe<br> 
 easily made quickest egg plant gravy curry everyone's favorite receipe</font></center>
-<br><center>watchnow</center>
-<center><a href="https://youtu.be/IV0JgWmCyfI" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
-<br><br>
-<center><image src="hummus.jpeg" width="1000" height="700" border="30"></center>       
+<br>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/IV0JgWmCyfI"  frameborder="0" allowfullscreen></iframe></center>
+<br><br>       
 <br>
 <center><font size="6">6.Hummus recipe  simple and easy way Homemade Hummus Healthy Hummus everyone can eat<br> with falafel or saladBest tasty Hummus you have ever hadHummus with Healthy Snacks Falafel Hummus Chickpeas Recipe <br>| Veg Salad Hummus Hummus Best food one can have anytime and can make it easily with very few ingredientsServe <br>with salad, falafel or with wrap
 Best food you can have at home super healthy</font></center>
-<br><center>watchnow</center>
-<center><a href="https://youtu.be/oRsmfVWqwY8" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
+<br>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/oRsmfVWqwY8"  frameborder="0"  allowfullscreen></iframe></center>
 <br><br>
-<center><image src="burger.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">7.Veggie burger Beans patty burger includes veg patty preparation super tasty must try recipe <br>and let me know your feedback</font></center>
 <ul type="square"><li>Ingredients required</li> 
@@ -69,17 +62,15 @@ Best food you can have at home super healthy</font></center>
 <li>Pickles (optional)</li>
 <li>That’s it</li> 
 <li>you will have amazing super easy beans homemade burger</li></ul>
-<br><center>watchnow</center>
-<center><a href="https://youtu.be/zdx-qRHGL74" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
+<br>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/oRsmfVWqwY8" frameborder="0"  allowfullscreen></iframe></center>>
 <br><br>
-<center><image src="guacamole.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">8.Guacamole Avacado recipe also make it as Avacado bread for breakfast or dinner Can be done in less than 5 mins<br> with very few ingredients super healthy and tasty
 Required ingredients: 1 avacado, Onion,Chili,Garlic, clove,Lemon,Salt and pepper,Roasted Bread<pr>Let me know your feedback<></font></center>
-<br><center>watchnow</center>
-<center><a href="https://youtu.be/fPvtnIM6YMo" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
+<br>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/fPvtnIM6YMo"  frameborder="0" allowfullscreen></iframe></center>
 <br><br>
-<center><image src="omlet.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">9.Healthy breakfast and snack recipe can be made easily within 5 mins</font></center> 
 <ul type="square"><li>Ingredients:</li> 
@@ -88,11 +79,11 @@ Required ingredients: 1 avacado, Onion,Chili,Garlic, clove,Lemon,Salt and pepper
 <li>1 toasted bread slice</li>
 <li>1/4 chopped onion</li> 
 <li>Pinch of salt and pepper</li> 
-<li>That’s it</li></ul>
-<br><center>watchnow</center>
-<center><a href="https://youtu.be/puHmdSa2zw8" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
+<li>That’s it</li>
+</ul>
+<br>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/puHmdSa2zw8" frameborder="0" allowfullscreen></iframe></center>
 <br><br>
-<center><image src="vbiriyani.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">10.Vegetable Biryani Panner Biryani Veg Biryani vegetable biriyani Veg Biryani Recipe <br>| veg Dum Biryani | vegetable Dum Biriyani | panner Biryani |panner Biryani restaurant style <br>| restaurant style Biriyani 
 Vegetable Biryani or Panner Biriyani or Hyderabadi biriyani or veg biriyani or veg Dum biriyani made<br> with various veggies and spices super tasty and restaurant style <br>with gravy under Biriyani rice
@@ -118,11 +109,11 @@ Hope you will enjoy it with your family</font></center>
 <li>greenchilies,</li> 
 <li>Tamato,</li> 
 <li>curryleaves</li>
-<li>Gingergarlic paste</li></ul>
-<br><center>watchnow</center>
-<center><a href="https://youtu.be/fS4skmFAWZo" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
+<li>Gingergarlic paste</li>
+</ul>
+<br>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/fS4skmFAWZo" frameborder="0" allowfullscreen></iframe></center>>
 <br><br>
-<center><image src="chicken.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">11.Chicken Recipe  Chicken Curry  Chicken Gravy Chicken recipe Chicken Gravy Recipe Chicken Breast curry Chicken curry for <br>rice Chicken Gravy for roti Simple Chicken curry easy chicken curry quick chicken curry
 <br>Chicken curry with simple steps with few ingredients super tasty enjoy it rice and roti
@@ -145,11 +136,11 @@ Hope you will enjoy it with your family</font></center>
 <li>Cinnamon, cloves and cardamom</li>  
 <li>Poppyseeds</li>  
 <li>Coconut powder</li> 
-<li>That’s it</li></ul>
-<center>watchnow</center>
-<center><a href="https://youtu.be/W8lMza0OAz8" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
+<li>That’s it</li>
+</ul>
+<br>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/W8lMza0OAz8" frameborder="0" allowfullscreen></iframe></center>>
 <br><br>
-<center><image src="bendi.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">12.Bhindi Fry Recipe , Bhindi fry , okra fry,  Bendakaya vepudu, Fry curries Ladiesfinger recipe Ladiesfinger fry lunch recipe<br> side dish for roti or chapathi or rice Bendi fry 
 <br>#Bendakaya fry can be done in less than 15 minutes with very few ingredients 
@@ -166,11 +157,11 @@ Hope you will enjoy it with your family</font></center>
 <li>1/4 spoon chilli powder</li>
 <li>1 spoon coconut powder</li>
 <li>Curry leaves</li>
-<li>Coriander leaves</li></ul>
-<br><center>watchnow</center>
-<center><a href="https://youtu.be/WJhBKcbMnYY" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
+<li>Coriander leaves</li>
+</ul>
+<br>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/WJhBKcbMnYY"  frameborder="0"  allowfullscreen></iframe></center>>
 <br><br>
-<center><image src="hash.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">13.Hash browns Burger made from potatoes and veggies super tasty MC Donald’s style recipe with crispy Hashbrowns
 <br>Restaurant style and super crispy veggie tasty burger
@@ -198,15 +189,14 @@ Hope you will enjoy it with your family</font></center>
 <li>Mustard</li>
 <li>Mayonnaise</li>
 </ul>
-<br><center>watchnow</center>
-<center><a href="https://youtu.be/6KfIBA4P83M" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
+<br>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/6KfIBA4P83M" frameborder="0" allowfullscreen></iframe></center>
 <br><br>
-<center><image src="papu.jpeg" width="1000" height="700" border="30"></center>
 <br>
 <center><font size="6">14.Pappu Charu with Lemon is simple recipe can prepare in few mins 
 <br>2 varieties with toor dal one is Chappidi Pappu and them Pappu Charu
 <br>Chappidi Pappu is best combination with rice and pickle also ghee even kids enjoy it very much</font></center>
-<ul type="square" allign="left" ><li>Ingredients:</li>
+<ul type="square" ><li>Ingredients:</li>
 <li>1 cup Dal</li>
 <li>Turmeric powder</li> 
 <li>1/4 onion </li>
@@ -221,9 +211,10 @@ Hope you will enjoy it with your family</font></center>
 <li>Garlic cloves</li>
 <li>Curry leaves</li>
 <li>Lemon 1 or 2</li>
-<li>That’s it</li></ul>
-<br><center>watchnow</center>
-<center><a href="https://youtu.be/XcaQ9xD1xNk" target="blank"><image src="https://i.pinimg.com/originals/31/23/9a/31239a2f70e4f8e4e3263fafb00ace1c.png" width="50" heigth="50"></a></center>
+<li>That’s it</li>
+</ul>
+<br>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/XcaQ9xD1xNk" frameborder="0" allowfullscreen></iframe></center>
 <br><br><br>
 <center><marquee scrollamount="10"><font size="8">Thankyou!!!</font></center></marquee>
 <br><br><br>
@@ -233,6 +224,7 @@ Hope you will enjoy it with your family</font></center>
 <br>
 <center>contact</center>
 <a href="https://www.facebook.com/gopavarapu.pandu/" target="blank"><image src="https://image.flaticon.com/icons/png/512/124/124010.png" width="50" height="50"></a>
+
 
 </body>
 </html>
