--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <br><br><br><br>
 <br><br><br><br>
-<center><font size="6" face="Lucida Sans">
+<center><font size="6" face="fantasy">
 Origin from India this website is mainly will be on cooking<br>
 which includes all varieties of Andhra ,Telangana style and other countries tasty<br>
 and easy cooking recipe videos with English subtitles, tour, home design and decor<br>
@@ -24,7 +24,7 @@ Also on gardening and health tips Workout too Stay tuned.</center>
 <br><br>
 <br>
 <center><font size="6">2.Fruits smoothie fruits juice fruits and nuts smoothie& nuts juice milkshake<br> super easy to make for kids and pregnants or diabetic patients</font></center>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/IZq-A_6VW18" frameborder="0" allowfullscreen></iframe></center>>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/IZq-A_6VW18" frameborder="0" allowfullscreen></iframe></center>
 <br><br>
 <br>
 <center><font size="6">3.Tomato Soya rice or Tomato rice or<br> Tomato Pulav in Pulav style Indian rice style recipe can be made all the times</font></center>
@@ -63,7 +63,7 @@ Best food you can have at home super healthy</font></center>
 <li>That’s it</li> 
 <li>you will have amazing super easy beans homemade burger</li></ul>
 <br>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/oRsmfVWqwY8" frameborder="0"  allowfullscreen></iframe></center>>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/oRsmfVWqwY8" frameborder="0"  allowfullscreen></iframe></center>
 <br><br>
 <br>
 <center><font size="6">8.Guacamole Avacado recipe also make it as Avacado bread for breakfast or dinner Can be done in less than 5 mins<br> with very few ingredients super healthy and tasty
@@ -112,7 +112,7 @@ Hope you will enjoy it with your family</font></center>
 <li>Gingergarlic paste</li>
 </ul>
 <br>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/fS4skmFAWZo" frameborder="0" allowfullscreen></iframe></center>>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/fS4skmFAWZo" frameborder="0" allowfullscreen></iframe></center>
 <br><br>
 <br>
 <center><font size="6">11.Chicken Recipe  Chicken Curry  Chicken Gravy Chicken recipe Chicken Gravy Recipe Chicken Breast curry Chicken curry for <br>rice Chicken Gravy for roti Simple Chicken curry easy chicken curry quick chicken curry
@@ -139,7 +139,7 @@ Hope you will enjoy it with your family</font></center>
 <li>That’s it</li>
 </ul>
 <br>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/W8lMza0OAz8" frameborder="0" allowfullscreen></iframe></center>>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/W8lMza0OAz8" frameborder="0" allowfullscreen></iframe></center>
 <br><br>
 <br>
 <center><font size="6">12.Bhindi Fry Recipe , Bhindi fry , okra fry,  Bendakaya vepudu, Fry curries Ladiesfinger recipe Ladiesfinger fry lunch recipe<br> side dish for roti or chapathi or rice Bendi fry 
@@ -160,7 +160,7 @@ Hope you will enjoy it with your family</font></center>
 <li>Coriander leaves</li>
 </ul>
 <br>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/WJhBKcbMnYY"  frameborder="0"  allowfullscreen></iframe></center>>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/WJhBKcbMnYY"  frameborder="0"  allowfullscreen></iframe></center>
 <br><br>
 <br>
 <center><font size="6">13.Hash browns Burger made from potatoes and veggies super tasty MC Donald’s style recipe with crispy Hashbrowns
