--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <br><br><br><br>
 <br><br><br><br>
-<center><font size="6" face="fantasy">
+<center><font size="6" face=" Papyrus">
 Origin from India this website is mainly will be on cooking<br>
 which includes all varieties of Andhra ,Telangana style and other countries tasty<br>
 and easy cooking recipe videos with English subtitles, tour, home design and decor<br>
