--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@ Also on gardening and health tips Workout too Stay tuned.</center>
 <br><br>
 <br>
 <center><font size="6">2.Fruits smoothie fruits juice fruits and nuts smoothie& nuts juice milkshake<br> super easy to make for kids and pregnants or diabetic patients</font></center>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/IZq-A_6VW18" frameborder="0" allowfullscreen></iframe></center>
+<br><center><iframe width="560" height="315" src="https://www.youtube.com/embed/IZq-A_6VW18" frameborder="0" allowfullscreen></iframe></center>
 <br><br>
 <br>
 <center><font size="6">3.Tomato Soya rice or Tomato rice or<br> Tomato Pulav in Pulav style Indian rice style recipe can be made all the times</font></center>
 
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/jovpLnFwZqs"  frameborder="0"  allowfullscreen></iframe></center>
+<br><center><iframe width="560" height="315" src="https://www.youtube.com/embed/jovpLnFwZqs"  frameborder="0"  allowfullscreen></iframe></center>
 <br><br>
 <br>
 <center><font size="6">4.Crispy Falafel Must try best Falafel healthy fresh vegetable salad hummus(you will love it)</font></center>
