--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>ssdine&tour</title>
-<body bgcolor="#FFF0F5">
+<body bgcolor="#B0E0E6">
 <br><br><br><marquee direction="up" scrollamount="5"><CENTER><font face="impact" size="12">
 <image src="https://yt3.ggpht.com/ytc/AAUvwni0rVzIzw57m8HjQbFazQX-LbtdT1B4GU8wKg=s176-c-k-c0x00ffffff-no-rj" width="40" heigth="30">DINE&TOUR</font></center></marquee>
 
