--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
+ <head>
 <title>ssdine&tour</title>
+ <meta charset="UTF-8">
+  <meta name="description" content="cooking website ss dine&tour https://hanu19.github.io/ssdineandtour/">
+  <meta name="keywords" content="recepies, ssdineandtour, hanu19">
+  <meta name="author" content="hanumanth">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body bgcolor="#B0E0E6">
 <br><br><br><marquee direction="up" scrollamount="5"><CENTER><font face="impact" size="12">
 <image src="https://yt3.ggpht.com/ytc/AAUvwni0rVzIzw57m8HjQbFazQX-LbtdT1B4GU8wKg=s176-c-k-c0x00ffffff-no-rj" width="40" heigth="30">DINE&TOUR</font></center></marquee>
