--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="cooking website ss dine&tour https://hanu19.github.io/ssdineandtour/">
   <meta name="keywords" content="recepies, ssdineandtour, hanu19">
   <meta name="author" content="hanumanth">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body bgcolor="#B0E0E6">
 <br><br><br><marquee direction="up" scrollamount="5"><CENTER><font face="impact" size="12">
