--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="cooking website ss dine&tour https://hanu19.github.io/ssdineandtour/">
   <meta name="keywords" content="recepies, ssdineandtour, hanu19">
   <meta name="author" content="hanumanth">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <!--meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"-->
 </head>
 <body bgcolor="#B0E0E6">
 <br><br><br><marquee direction="up" scrollamount="5"><CENTER><font face="impact" size="12">
@@ -27,7 +27,7 @@ Also on gardening and health tips Workout too Stay tuned.</center>
 <br>| Healthy BananaBread Banana Cake BananaBread Recipe Cake Baking Bread baking 
 </font></center>
 <br>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/5Yc2qAj0AuQ"  frameborder="0" allowfullscreen></iframe></center>
+<center><iframe width="1000" height="500" src="https://www.youtube.com/embed/5Yc2qAj0AuQ"  frameborder="0" allowfullscreen></iframe></center>
 <br><br>
 <br>
 <center><font size="6">2.Fruits smoothie fruits juice fruits and nuts smoothie& nuts juice milkshake<br> super easy to make for kids and pregnants or diabetic patients</font></center>
